--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "geek-corner-project",
+  "name": "geek-corner-server",
   "version": "0.0.0",
   "private": true,
   "scripts": {
@@ -22,6 +22,7 @@
     "multer": "^1.4.2",
     "multer-storage-cloudinary": "^4.0.0",
     "passport": "^0.4.1",
+    "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0"
   },
   "devDependencies": {
